# mycythonlib

./: README.md
cpp/: CMakeLists.txt
cpp/include/: Circle.h  library.h  simplelibrary.h
cpp/src/: Circle.cpp  Rectangle.cpp  library.cpp  simplelibrary.cpp
examples/: CMakeLists.txt  main.cpp
python/: Makefile  setup.py
python/cpp/include/: library.h  simplelibrary.h
python/geometry/: circle.pyx
python/lib/: Rectangle.cpp  Rectangle.h  library.pyx  rect.pyx  simplelibrary.pyx
python/test/: test_mycythonlib.py
